--- a/estilo.css
+++ b/estilo.css
@@ -1,35 +1,40 @@
-html, body{
-    height: 100%;
+html,
+body {
+  height: 100%;
+  margin: 0;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  
 }
 
-.tamanho2{
-    flex: 2;
-    background-color: yellow;
+.tamanho2 {
+  flex: 2;
+  background-color: yellow;
 }
 
-.tamanho6{
-    background-color: red;
-    flex: 2;
+.tamanho6 {
+  flex: 6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
-input[type="text"]{
-    background-color: green;
-    color: aquamarine;
-    border: solid;
-    border-radius: 50px;
-   
+input[type="text"] {
+  background-color: green;
+  color: aquamarine;
+  border: solid;
+  border-radius: 50px;
 }
 
-input[type="submit"]{
-    background-color: aquamarine;
-    color: green;
-    border: solid;
-    border-radius: 50px;
-    margin-left: 30px;
-    
+input[type="submit"] {
+  background-color: aquamarine;
+  color: green;
+  border: solid;
+  border-radius: 50px;
+  margin-left: 30px;
 }
